[tool.poetry]
name = "snippets"
version = "0.1.0"
description = ""
authors = ["Leo Feradero Nugraha <leoferaderonugraha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.971"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
